# ml_challenge_as24-master

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/log_metadata/: mlchallenge_labels-X.csv  mlchallenge_labels.csv
data/mlchallenge_submissions/: TEST_AJAY.xls  kmean_clustering_submission.csv  mlchallenge_labels-XX.csv  random_submission.csv  spectral_clustering_submission.csv
docs/: Challenge-Overview.pptx  DATA.md  EVAL.md  PYENV.md  RUN.md
ml_challenge/: utils.py
notebooks/: simple_baseline.ipynb
scripts/: convert_mlchallenge_labels.py  embed_mlchallenge_data.py  evaluate_mlchallenge_submissions.py  prepare_mlchallenge_data.py  prepare_mlchallenge_labels.py
